# opensearch

./: Makefile  README.md  create-document.py  create-index.py  delete-document.py  delete-index.py  pyproject.toml  search-document.py
